<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_source_files"
        android:icon="@drawable/ic_folder"
        android:title="@string/source_files"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_log_query"
        android:icon="@drawable/ic_log_search"
        android:title="@string/log_query"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_pause_march"
        android:title="@string/milestone_pause"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_single_step"
        android:title="@string/milestone_single_step"
        android:visible="false"
        app:showAsAction="never" />
</menu>
